# skills

./: README.md
skills/0x7466/bw-cli/: SKILL.md  _meta.json
skills/0xdismissals/clawnance/: _meta.json
skills/0xlucasliao/bnbchain-erc8004-agent/: _meta.json  cli.js  config.json  package-lock.json  package.json
skills/0xnuminous/letterboxd-watchlist/: SKILL.md  _meta.json
skills/0xraini/molt-solver/: _meta.json
skills/0xraini/moltdash/: SKILL.md  moltdash.ts  package.json
skills/0xrikt/clawarena/: SKILL.md  _meta.json
skills/0xsnackbaker/moltycash/: SKILL.md  _meta.json
skills/0xterrybit/solana-trader-v2/: _meta.json
skills/0xterrybit/todo/: SKILL.md  _meta.json
skills/0xterrybit/twitter/: _meta.json
skills/10xcoldleads/highlevel/: SKILL.md  _meta.json
skills/1bcmax/clawrouter/: _meta.json
skills/1lystore/1ly-payments/: SKILL.md  _meta.json
skills/24601/agent-deep-research/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  _meta.json
skills/402goose/compact-state/: SKILL.md  _meta.json  molt-tools.js
skills/a638011/starlight-guild/: SKILL.md
skills/aaron-he-zhu/alert-manager/: SKILL.md  _meta.json
skills/aaron-he-zhu/backlink-analyzer/: SKILL.md  _meta.json
skills/aaron-he-zhu/competitor-analysis/: SKILL.md  _meta.json
skills/aaron-he-zhu/content-gap-analysis/: SKILL.md  _meta.json
skills/aaron-he-zhu/content-quality-auditor/: SKILL.md  _meta.json
skills/aaron-he-zhu/content-refresher/: SKILL.md  _meta.json
skills/aaron-he-zhu/domain-authority-auditor/: SKILL.md  _meta.json
skills/aaron-he-zhu/geo-content-optimizer/: SKILL.md  _meta.json
skills/aaron-he-zhu/internal-linking-optimizer/: SKILL.md  _meta.json
skills/aaron-he-zhu/keyword-research/: SKILL.md  _meta.json
skills/aaron-he-zhu/memory-management/: SKILL.md  _meta.json
skills/aaron-he-zhu/meta-tags-optimizer/: SKILL.md  _meta.json
skills/aaron-he-zhu/on-page-seo-auditor/: SKILL.md  _meta.json
skills/aaron-he-zhu/performance-reporter/: SKILL.md  _meta.json
skills/aaron-he-zhu/rank-tracker/: _meta.json
skills/aaron-he-zhu/schema-markup-generator/: SKILL.md  _meta.json
skills/aaron-he-zhu/seo-content-writer/: _meta.json
skills/aaron-he-zhu/serp-analysis/: SKILL.md  _meta.json
skills/aaron-he-zhu/technical-seo-checker/: SKILL.md  _meta.json
skills/aaronchartier/inkjet/: _meta.json
skills/abdul-karim-mia/gumroad-pro/: CHANGELOG.md  SKILL.md  _meta.json  handler.js  pending_input.json
skills/abdul-karim-mia/terabox-link-extractor/: SKILL.md  _meta.json
skills/abdullah4ai/openclaw-watchdog/: SKILL.md  _meta.json
skills/abhi152003/maxxit-lazy-trading/: _meta.json
skills/adamewozniak/turbine-trading-bot/: _meta.json
skills/adamjsturrock/pinchedin/: _meta.json
skills/adamkristopher/botcoin/: SKILL.md  _meta.json
skills/adamnaghs/options-spread-conviction-engine/: README.md  SKILL.md  _meta.json  release.sh
skills/adamnaghs/safe-web/: SKILL.md  _meta.json  skill.json
skills/adamthompson33/moltcops/: _meta.json
skills/adarshmishra07/clawcontrol/: SKILL.md  _meta.json  clawhub.json
skills/adhishthite/jina-ai/: SKILL.md  _meta.json
skills/adlai88/mertsniper/: SKILL.md  _meta.json  mert_sniper.py
skills/adlai88/simmer/: _meta.json  docs.md  skill.md
skills/adlai88/simmer-mertsniper/: SKILL.md  _meta.json  mert_sniper.py
skills/adlai88/simmer-publish/: _meta.json
skills/adlai88/simmer-skill/: SKILL.md  _meta.json
skills/aenjoy/lybic-sandbox/: SKILL.md  _meta.json
skills/aetherstacey/erc8004-register/: SKILL.md  _meta.json
skills/af271/belief-markets/: SKILL.md  (+10 more)
skills/hughpyle/keep/: README.md  pyproject.toml
skills/hughpyle/keep/commands/: reflect.md
skills/hughpyle/keep/docs/: AGENT-GUIDE.md  ARCHITECTURE.md  META-DOCS.md  OPENCLAW-INTEGRATION.md  PYTHON-API.md  QUICKSTART.md  REFERENCE.md  RELEASING.md  SYSTEM-TAGS.md
skills/hughpyle/keep/keep/: __init__.py  api.py  cli.py  config.py  document_store.py  integrations.py  model_lock.py  store.py  types.py
skills/hughpyle/keep/keep/data/openclaw-plugin/: index.ts  openclaw.plugin.json  package.json
skills/hughpyle/keep/keep/data/system/: tag-act.md  tag-status.md
skills/hughpyle/keep/keep/providers/: base.py  documents.py  embedding_cache.py  embeddings.py  llm.py  mlx.py  summarization.py
skills/hughpyle/keep/later/: todo.txt
skills/hughpyle/keep/tests/: conftest.py  test_cli.py  test_config_command.py  test_core.py  test_keeper.py  test_openclaw_integration.py
skills/operatingdev/mintyouragent/: CHANGELOG.md  CONTRIBUTING.md  SKILL.md  _meta.json  mya.py  pyproject.toml  skill.json
(+2377 files in other folders)
